--- a/index.html
+++ b/index.html
@@ -108,6 +108,42 @@
 &gt; → > (greater-than sign, U+003E)
 &lt;div&gt; &lt;/div&gt;
 
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      Одна из трёх колонок
+    </div>
+    <div class="col-sm">
+      Одна из трёх колонок
+    </div>
+    <div class="col-sm">
+      Одна из трёх колонок
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      Одна из трёх колонок
+    </div>
+    <div class="col-sm">
+      Одна из трёх колонок
+    </div>
+    <div class="col-sm">
+      Одна из трёх колонок
+    </div>
+  <div class="col-sm">
+      Одна из трёх колонок
+    </div>
+    <div class="col-sm">
+      Одна из трёх колонок
+    </div>
+    <div class="col-sm">
+      Одна из трёх колонок
+    </div>
+  </div>
+</div>
+
 </main>
 
 <div class="footer"></div>
