--- a/index.html
+++ b/index.html
@@ -111,35 +111,35 @@
 <div class="container">
   <div class="row">
     <div class="col-sm">
-      Одна из трёх колонок
+      <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
     </div>
     <div class="col-sm">
-      Одна из трёх колонок
+      <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
     </div>
     <div class="col-sm">
-      Одна из трёх колонок
+      <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
     </div>
   </div>
 </div>
 <div class="container">
   <div class="row">
     <div class="col-sm">
-      Одна из трёх колонок
+      <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
     </div>
     <div class="col-sm">
-      Одна из трёх колонок
+      <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
     </div>
     <div class="col-sm">
-      Одна из трёх колонок
+      <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
     </div>
   <div class="col-sm">
-      Одна из трёх колонок
+      <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
     </div>
     <div class="col-sm">
-      Одна из трёх колонок
+      <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
     </div>
     <div class="col-sm">
-      Одна из трёх колонок
+      <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
     </div>
   </div>
 </div>
