--- a/index.html
+++ b/index.html
@@ -110,35 +110,22 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm">
+    <div class="col-12 col-sm-6 col-md-4">
       <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
     </div>
-    <div class="col-sm">
+    <div class="col-12 col-sm-6 col-md-4">
       <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
     </div>
-    <div class="col-sm">
+    <div class="col-12 col-sm-6 col-md-4">
       <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
     </div>
-  </div>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col-sm">
+  <div class="col-12 col-sm-6 col-md-4">
       <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
     </div>
-    <div class="col-sm">
+    <div class="col-12 col-sm-6 col-md-4">
       <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
     </div>
-    <div class="col-sm">
-      <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
-    </div>
-  <div class="col-sm">
-      <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
-    </div>
-    <div class="col-sm">
-      <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
-    </div>
-    <div class="col-sm">
+    <div class="col-12 col-sm-6 col-md-4">
       <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
     </div>
   </div>
