--- a/charts/index.html
+++ b/charts/index.html
@@ -46,65 +46,13 @@
     </nav>
 
 
+<a class="dropdown-item" href="/charts">Charts</a>
 <main role="main" class="container">
 
   <div class="starter-template">
     
   </div>
 
-<img src="screenshot.jpg" class="img-fluid" alt="Адаптивные изображения">
-
-<p>тег-выделитель для <mark>подсветки</mark> текста.</p>
-<p><del>Удаленный текст.</del></p>
-<p><s>Зачеркнутый.</s></p>
-<p><ins>Строка - дополнение к документу.</ins></p>
-<p><u>Подчеркнутая</u></p>
-<p><small>Мелкий шрифт (типа нижний индекс).</small></p>
-<p><strong>Жирный текст.</strong></p>
-<p><em>Курсив.</em></p>
-<ul class="list-unstyled">
-  <li>Lorem ipsum dolor sit amet</li>
-  <li>Consectetur adipiscing elit</li>
-  <li>Integer molestie lorem at massa</li>
-  <li>Facilisis in pretium nisl aliquet</li>
-  <li>Nulla volutpat aliquam velit
-    <ul>
-      <li>Phasellus iaculis neque</li>
-      <li>Purus sodales ultricies</li>
-      <li>Vestibulum laoreet porttitor sem</li>
-      <li>Ac tristique libero volutpat at</li>
-    </ul>
-  </li>
-  <li>Faucibus porta lacus fringilla vel</li>
-  <li>Aenean sit amet erat nunc</li>
-  <li>Eget porttitor lorem</li>
-</ul>
-&lt; → < (less-than sign, U+003C)
-&gt; → > (greater-than sign, U+003E)
-&lt;div&gt; &lt;/div&gt;
-
-<div class="container">
-  <div class="row">
-    <div class="col-12 col-sm-6 col-md-4">
-      <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
-    </div>
-    <div class="col-12 col-sm-6 col-md-4">
-      <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
-    </div>
-    <div class="col-12 col-sm-6 col-md-4">
-      <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
-    </div>
-  <div class="col-12 col-sm-6 col-md-4">
-      <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
-    </div>
-    <div class="col-12 col-sm-6 col-md-4">
-      <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
-    </div>
-    <div class="col-12 col-sm-6 col-md-4">
-      <img src="cat.jpg" class="img-fluid" alt="Адаптивные изображения">
-    </div>
-  </div>
-</div>
 
 </main>
 
