--- a/index.html
+++ b/index.html
@@ -19,9 +19,36 @@
         }
         
     </style>
-  </head>
-  <body>
 
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load('current', {'packages':['corechart']});
+      google.charts.setOnLoadCallback(drawChart);
+
+      function drawChart() {
+
+        var data = google.visualization.arrayToDataTable([
+          ['Task', 'Hours per Day'],
+          ['Work',     11],
+          ['Eat',      2],
+          ['Commute',  2],
+          ['Watch TV', 2],
+          ['Sleep',    7]
+        ]);
+
+        var options = {
+          title: 'My Daily Activities'
+        };
+
+        var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+
+        chart.draw(data, options);
+      }
+    </script>
+  </head>
+
+  <body>
+	
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="/">< Books ></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,6 +64,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/python">Python</a>
               <a class="dropdown-item" href="/javascript">Javascript</a>
+	      <a class="dropdown-item" href="/charts">Charts</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="/">All</a>
             </div>
@@ -44,7 +72,6 @@
         </ul>
       </div>
     </nav>
-
 
 <main role="main" class="container">
 
@@ -78,6 +105,7 @@
     </table>
 
   </div>
+<div id="piechart" style="width: 900px; height: 500px;"></div>
 
 <img src="screenshot.jpg" class="img-fluid" alt="Адаптивные изображения">
 
