--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
               <a class="dropdown-item" href="/javascript">Javascript</a>
               <div class="dropdown-divider"></div>
 	      <a class="dropdown-item" href="/charts">Charts</a>
+	      <a class="dropdown-item" href="/cats">Cats</a>
               <a class="dropdown-item" href="/">All</a>
             </div>
           </li>
