--- a/cats/index.html
+++ b/cats/index.html
@@ -30,6 +30,11 @@
     margin: 7px 0 7px 7px; 
     border: 3px solid #808080;
    }
+   .img  {
+    float: no;
+    margin: 7px 0 7px 7px; 
+    border: 3px solid #808080;
+   }
  
   </style>
 
@@ -60,23 +65,62 @@
       </div>
     </nav>
 
-<div class="container px-0">
+<div class="container">
 
 	<h1>Породы кошек и виды котов</h1>
-
-	<p>Мир кошек удивительно многолик. На сегодняшний день существует более двухсот официально признанных кошачьих пород. Чтобы легко ориентироваться во всём многообразии, необходимо понять принципы классификации этих млекопитающих.
-	<br></br>
-	Изначально виды кошек различали по длине шерсти. Существовало всего две категории: короткошёрстные и длинношёрстные. Но время показало несостоятельность такой систематизации: вследствие естественных мутаций или в результате работы селекционеров появились кошки с шерстью средней длины, которых невозможно было отнести ни к одной из двух категорий. Плюс ко всему животные очень часто отличались по размеру: большие кошки, маленькие, средние — это тоже нужно было учитывать. Поэтому фелинологи предложили четыре варианта классификации кошек.
-	</p>
+	<div calss="row">
+		<p>Мир кошек удивительно многолик. На сегодняшний день существует более двухсот официально признанных кошачьих пород. Чтобы легко ориентироваться во всём многообразии, необходимо понять принципы классификации этих млекопитающих.
+		<br></br>
+		Изначально виды кошек различали по длине шерсти. Существовало всего две категории: короткошёрстные и длинношёрстные. Но время показало несостоятельность такой систематизации: вследствие естественных мутаций или в результате работы селекционеров появились кошки с шерстью средней длины, которых невозможно было отнести ни к одной из двух категорий. Плюс ко всему животные очень часто отличались по размеру: большие кошки, маленькие, средние — это тоже нужно было учитывать. Поэтому фелинологи предложили четыре варианта классификации кошек.
+		</p>
+	</div>
 	<ol>
 	<h2><li>По телосложению</h2>
-  <p><img src="1.jpg" width="511" height="383" class="leftimg">
-	Здесь всего две категории: кошки с крепким телосложением и кошки — с изящным.
-	<br></br>
-	К первым можно отнести <strong>короткошёрстных шартрезов</strong>, выведенных во Франции. Они отличаются массивным туловищем с тяжёлым костяком и сильными мышцами. 
-	<br></br>
-	Самые популярные представители породы с изящным телосложением — <strong>сиамские кошки</strong>. Активные, игривые, общительные и доверчивые — яркая противоположность шартрезам.
-     </p>
+	<div calss="row">
+  		<p><img src="1.jpg" width="511" height="383" class="leftimg">
+		Здесь всего две категории: кошки с крепким телосложением и кошки — с изящным.
+		<br></br>
+		К первым можно отнести <strong>короткошёрстных шартрезов</strong>, выведенных во Франции. Они отличаются массивным туловищем с тяжёлым костяком и сильными мышцами. 
+		<br></br>
+		Самые популярные представители породы с изящным телосложением — <strong>сиамские кошки</strong>. Активные, игривые, общительные и доверчивые — яркая противоположность шартрезам.
+        	</p>
+	</div>
+	<br></br><br></br><br></br>
+	<h2><li>По типу шерстяного покрова:</h2>
+	<div class="row">
+		<div class="col-sm">
+		<img src="2.jpg" width="184" hight="122" class="img"><br>
+		<p>
+		<strong>Бурманская кошка</strong> не сложна в уходе, поскольку имеет минимальный подшёрсток, не позволяющий спутываться шерсти в колтуны. Достаточно пару раз в неделю проходиться по шелковистой шубке гребнем с частыми зубчиками и массировать кожу массажной щёткой, удаляя отмершие волоски и стимулируя рост новых. Правда, в период сезонной линьки вычёсывать домашнего питомца придётся минимум два раза в сутки.
+		</p>
+		</div>
+		<div class="col-sm">
+		<p><img src="3.jpg" width="184" hight="122" class="img"><br>
+		<strong>Русская голубая кошка</strong> характер имеет мягкий, но независимый. Она любит общение, но не слишком приемлет объятия и физический контакт. Вычесать её она вам вряд ли позволит, но при этом никогда не выпустит когти, если вы всё-таки попробуете настоять на своём.
+		</p>
+		</div>
+		<div class="col-sm">
+		<p><img src="4.jpg" width="184" hight="122" class="img"><br>
+		Кудрявые красавцы <strong>корниш-рекс</strong> со своей каракулевой шёрсткой вполне справляются самостоятельно. Но вот коготками вам придётся регулярно заниматься: подушечки лапок слишком малы, и не могут вместить их в себя полностью. Поэтому корниш-рексу регулярно необходимо делать кошачий «маникюр». Необходимые рекомендации по этой процедуре вы сможете получить у ветеринарного врача. А ещё эта порода склонна к перееданию, поэтому количество корма должно быть строго регламентировано.
+		</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm">
+		<img src="5.jpg" width="184" hight="122" class="img"><br>
+		<p>
+		<strong>Американские жесткошёрстные кошки </strong> отличаются волнистой шерстью. Эффект «проволочной шубки» создают шерстинки на бёдрах, хвосте, голове и хребте, которые либо надломлены, либо загнуты и скреплены между собой. Животных этой породы расчёсывать не рекомендуется даже после купания, иначе «пружинки» шерсти исчезнут, и животное потеряет свой шарм и обаяние.
+		</p>
+		</div>
+		<div class="col-sm">
+		<p><img src="6.jpg" width="184" hight="122" class="img"><br>
+		Одни считают, что <strong>сфинксы</strong> – это лучшие кошки в мире, другие совершенно не понимают, как можно хотя бы приблизиться к такому животному, не говоря уже о том, чтобы погладить его. Тем не менее, сфинксам нужна ласка и внимание. А ещё они нуждаются в тепле: бесшёрстные кошки часто мёрзнут, и чтобы согреться, могут лечь на батарею или прислониться к работающей духовке, что чревато ожогами нежной кошачьей кожи. Поэтому владельцу сфинкса необходимо позаботиться о тёплой лежанке для питомца и о том, чтобы в доме не было сквозняков.
+		</p>
+		</div>
+		<div class="col-sm">
+		</div>
+	</div>
+	
 </div>
 
 
