--- a/cats/index.html
+++ b/cats/index.html
@@ -120,6 +120,36 @@
 		<div class="col-sm">
 		</div>
 	</div>
+	<h2><li>По типу окраса</h2>
+	<div class="row">
+		<div class="col-12 col-sm-6 col-md-6">
+		<p align="center"><strong>одноцветные (гавана)</strong></p>
+		</div>
+		<div class="col-12 col-sm-6 col-md-6">
+		<p align="center"><strong>двухцветные (рэгдолл)</strong></p>
+		</div>		
+		<div class="col-12 col-sm-6 col-md-6">
+			<img src="7.jpg" class="img-fluid">
+		</div>
+		<div class="col-12 col-sm-6 col-md-6">
+			<img src="8.jpg" class="img-fluid">
+		</div>
+		<div class="col-12 col-sm-12 col-md-12">
+		<br></br>
+		</div>
+
+		<div class="col-12 col-sm-6 col-md-6">
+		<p align="center"><strong>пёстрые (мейн-кун)</strong></p>
+		</div>
+		<div class="col-12 col-sm-6 col-md-6">
+		<p align="center"><strong>с крапом (американская короткошерстная)</strong></p>
+		</div>		
+		<div class="col-12 col-sm-6 col-md-6">
+			<img src="9.jpg" class="img-fluid">
+		</div>
+		<div class="col-12 col-sm-6 col-md-6">
+			<img src="10.jpg" class="img-fluid">
+		</div>
 	
 </div>
 
